[gd_scene load_steps=93 format=2]

[ext_resource path="res://assets/enemy/wall/idle/0052.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity_wall.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy/wall/idle/0053.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/wall/idle/0054.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/wall/idle/0055.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/wall/idle/0040.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/wall/idle/0041.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/wall/idle/0045.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/wall/idle/0025.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/wall/idle/0042.png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/wall/idle/0036.png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/wall/idle/0028.png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/wall/idle/0030.png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/wall/idle/0043.png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/wall/idle/0044.png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/wall/idle/0022.png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/wall/idle/0029.png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/wall/idle/0026.png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/wall/idle/0035.png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/wall/idle/0031.png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/wall/idle/0037.png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/wall/idle/0038.png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/wall/idle/0039.png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/wall/idle/0023.png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/wall/idle/0027.png" type="Texture" id=25]
[ext_resource path="res://assets/enemy/wall/idle/0032.png" type="Texture" id=26]
[ext_resource path="res://assets/enemy/wall/idle/0033.png" type="Texture" id=27]
[ext_resource path="res://assets/enemy/wall/idle/0024.png" type="Texture" id=28]
[ext_resource path="res://assets/enemy/wall/idle/0034.png" type="Texture" id=29]
[ext_resource path="res://assets/enemy/wall/idle/0059.png" type="Texture" id=30]
[ext_resource path="res://assets/enemy/wall/idle/0056.png" type="Texture" id=31]
[ext_resource path="res://assets/enemy/wall/idle/0057.png" type="Texture" id=32]
[ext_resource path="res://assets/enemy/wall/idle/0058.png" type="Texture" id=33]
[ext_resource path="res://assets/enemy/wall/idle/0047.png" type="Texture" id=34]
[ext_resource path="res://assets/enemy/wall/idle/0048.png" type="Texture" id=35]
[ext_resource path="res://assets/enemy/wall/idle/0049.png" type="Texture" id=36]
[ext_resource path="res://assets/enemy/wall/idle/0050.png" type="Texture" id=37]
[ext_resource path="res://assets/enemy/wall/idle/0051.png" type="Texture" id=38]
[ext_resource path="res://assets/enemy/wall/idle/0046.png" type="Texture" id=39]
[ext_resource path="res://assets/enemy/wall/idle/0003.png" type="Texture" id=40]
[ext_resource path="res://assets/enemy/wall/idle/0000.png" type="Texture" id=41]
[ext_resource path="res://assets/enemy/wall/idle/0006.png" type="Texture" id=42]
[ext_resource path="res://assets/enemy/wall/idle/0008.png" type="Texture" id=43]
[ext_resource path="res://assets/enemy/wall/idle/0009.png" type="Texture" id=44]
[ext_resource path="res://assets/enemy/wall/idle/0011.png" type="Texture" id=45]
[ext_resource path="res://assets/enemy/wall/idle/0013.png" type="Texture" id=46]
[ext_resource path="res://assets/enemy/wall/idle/0004.png" type="Texture" id=47]
[ext_resource path="res://assets/enemy/wall/idle/0014.png" type="Texture" id=48]
[ext_resource path="res://assets/enemy/wall/idle/0005.png" type="Texture" id=49]
[ext_resource path="res://assets/enemy/wall/idle/0010.png" type="Texture" id=50]
[ext_resource path="res://assets/enemy/wall/idle/0012.png" type="Texture" id=51]
[ext_resource path="res://assets/enemy/wall/idle/0015.png" type="Texture" id=52]
[ext_resource path="res://assets/enemy/wall/idle/0001.png" type="Texture" id=53]
[ext_resource path="res://assets/enemy/wall/idle/0002.png" type="Texture" id=54]
[ext_resource path="res://assets/enemy/wall/idle/0007.png" type="Texture" id=55]
[ext_resource path="res://assets/enemy/wall/idle/0020.png" type="Texture" id=56]
[ext_resource path="res://assets/enemy/wall/idle/0017.png" type="Texture" id=57]
[ext_resource path="res://assets/enemy/wall/idle/0018.png" type="Texture" id=58]
[ext_resource path="res://assets/enemy/wall/idle/0016.png" type="Texture" id=59]
[ext_resource path="res://assets/enemy/wall/idle/0019.png" type="Texture" id=60]
[ext_resource path="res://assets/enemy/wall/idle/0021.png" type="Texture" id=61]
[ext_resource path="res://assets/enemy/wall/idle/0061.png" type="Texture" id=62]
[ext_resource path="res://assets/enemy/wall/idle/0060.png" type="Texture" id=63]
[ext_resource path="res://assets/enemy/wall/idle/0066.png" type="Texture" id=64]
[ext_resource path="res://assets/enemy/wall/scared/0107.png" type="Texture" id=65]
[ext_resource path="res://assets/enemy/wall/scared/0109.png" type="Texture" id=66]
[ext_resource path="res://assets/enemy/wall/idle/0064.png" type="Texture" id=67]
[ext_resource path="res://assets/enemy/wall/scared/0108.png" type="Texture" id=68]
[ext_resource path="res://assets/enemy/wall/idle/0063.png" type="Texture" id=69]
[ext_resource path="res://assets/enemy/wall/idle/0067.png" type="Texture" id=70]
[ext_resource path="res://assets/enemy/wall/idle/0068.png" type="Texture" id=71]
[ext_resource path="res://assets/enemy/wall/scared/0100.png" type="Texture" id=72]
[ext_resource path="res://assets/enemy/wall/idle/0071.png" type="Texture" id=73]
[ext_resource path="res://assets/enemy/wall/idle/0072.png" type="Texture" id=74]
[ext_resource path="res://assets/enemy/wall/scared/0101.png" type="Texture" id=75]
[ext_resource path="res://assets/enemy/wall/idle/0069.png" type="Texture" id=76]
[ext_resource path="res://assets/enemy/wall/idle/0070.png" type="Texture" id=77]
[ext_resource path="res://assets/enemy/wall/scared/0102.png" type="Texture" id=78]
[ext_resource path="res://assets/enemy/wall/idle/0065.png" type="Texture" id=79]
[ext_resource path="res://assets/enemy/wall/scared/0106.png" type="Texture" id=80]
[ext_resource path="res://assets/enemy/wall/scared/0105.png" type="Texture" id=81]
[ext_resource path="res://assets/enemy/wall/idle/0062.png" type="Texture" id=82]
[ext_resource path="res://assets/enemy/wall/idle/0073.png" type="Texture" id=83]
[ext_resource path="res://assets/enemy/wall/scared/0104.png" type="Texture" id=84]
[ext_resource path="res://assets/enemy/wall/scared/0110.png" type="Texture" id=85]
[ext_resource path="res://assets/enemy/wall/scared/0103.png" type="Texture" id=86]
[ext_resource path="res://other/shader/entity_wall_shadermaterial.tres" type="Material" id=87]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSpriteScared:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 47, -294, 16, -419, -8, -417, -33, -292, -48, -44, -64, -30, -66, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSpriteIdle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSpriteScared:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "hide"
length = 0.44
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSpriteScared:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.24, 0.28, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 47, -294, 16, -419, -8, -417, -33, -292, -48, -44, -64, -30, -66, -15 ), PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 38, -254, 12, -302, -11, -295, -37, -222, -48, -44, -64, -30, -66, -15 ), PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 40, -177, 17, -201, -9, -222, -36, -197, -48, -44, -64, -30, -66, -15 ), PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 36, -127, 13, -146, -8, -148, -35, -125, -48, -44, -64, -30, -66, -15 ), PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 36, -76, 15, -88, -13, -76, -30, -74, -48, -44, -64, -30, -66, -15 ), PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 27, -61, 9, -65, -14, -61, -32, -52, -48, -44, -64, -30, -66, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSpriteIdle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSpriteScared:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:brightness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 1.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:addBrightness")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.96
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSpriteIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1, 1.04, 1.08, 1.12, 1.16, 1.2, 1.24, 1.28, 1.32, 1.36, 1.4, 1.44, 1.48, 1.52, 1.56, 1.6, 1.64, 1.68, 1.72, 1.76, 1.8, 1.84, 1.88, 1.92, 1.96, 2, 2.04, 2.08, 2.12, 2.16, 2.2, 2.24, 2.28, 2.32, 2.36, 2.4, 2.44, 2.48, 2.52, 2.56, 2.6, 2.64, 2.68, 2.72, 2.76, 2.8, 2.84, 2.88, 2.92 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSpriteIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSpriteScared:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:addBrightness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 42 ), ExtResource( 55 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 50 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 61 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 63 ), ExtResource( 62 ), ExtResource( 82 ), ExtResource( 69 ), ExtResource( 67 ), ExtResource( 79 ), ExtResource( 64 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 83 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 72 ), ExtResource( 75 ), ExtResource( 78 ), ExtResource( 86 ), ExtResource( 84 ), ExtResource( 81 ), ExtResource( 80 ), ExtResource( 65 ), ExtResource( 68 ), ExtResource( 66 ), ExtResource( 85 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="entity_wall" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
script = ExtResource( 2 )
addBrightness = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 49, 61, -6, 65, -26, 49, -55, 47, -294, 16, -419, -8, -417, -33, -292, -48, -44, -64, -30, -66, -15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 3 )
anims/hide = SubResource( 5 )
anims/idle = SubResource( 4 )

[node name="AnimatedSpriteIdle" type="AnimatedSprite" parent="."]
visible = false
material = ExtResource( 87 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
offset = Vector2( 0, -400 )

[node name="AnimatedSpriteScared" type="AnimatedSprite" parent="."]
material = ExtResource( 87 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
offset = Vector2( 0, -400 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
